add rando contact when clicking the + sign

--- a/app/src/main/res/menu/menu_contacts.xml
+++ b/app/src/main/res/menu/menu_contacts.xml
@@ -1,5 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ContactsActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item app:showAsAction="always" android:icon="@drawable/ic_add_black_18dp"
+        android:title="Add" android:onClick="addContact">
 
+    </item>
 </menu>
